src/objects/Content_Library_Lookup_MERC__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Used to define the Content Libraries that documents should be assigned to upon upload content.  Oliver Dunford 9th June 2014.</description>
    <fields>
        <fullName>Content_Document_Type_MERC__c</fullName>
        <description>Defines the content document type of the uploaded content document based upon a user selected value for the record type. Oliver Dunford 9th June 2014.</description>
        <label>Content Document Type</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Record_Type_MERC__c</fullName>
        <description>Defines the record type of the uploaded content document based upon Upload Content Page. Oliver Dunford 9th June 2014.</description>
        <inlineHelpText>Defines the record type of the uploaded content document based upon Upload Content Page.</inlineHelpText>
        <label>Content Record Type</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Library_String_MERC__c</fullName>
        <description>Defines the partial Library Name based upon defined record values.  Country and additional logic for Budgets are programatically driven from code and combined with this string to determine Library Name. Oliver Dunford 9th June 2014.</description>
        <label>Library String</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Content Library Lookup</label>
</CustomObject>